<resources>
    <string name="app_name">Persistencia_de_datos_Practica1</string>

    <!-- TEXT VIEW-->
    <string name="name">Nombre de Producto</string>
    <string name="date">Fecha</string>
    <string name="amount">Cantidad</string>
    <string name="unitPrice">Precio Unitario</string>
    <string name="stock">Stock</string>
    <string name="supplier">Proveedor</string>

    <!-- BOTONES -->
    <string name="save">💾Guardar</string>
    <string name="search">🔍Buscar</string>
    <string name="clean">🚮Limpiar</string>
</resources>